kubectl/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr            
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "1000m"  
          volumeMounts:
            - mountPath: /config
              name: nfs
              subPath: applications/radarr/volumes/config
            - mountPath: /data
              name: nfs
              subPath: applications/qbittorrent-nox/volumes              
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15          
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - radarr.joeberry.org
  rules:
  - host: radarr.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000         
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: radarr.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
